--- a/.screenrc
+++ b/.screenrc
@@ -5,14 +5,14 @@ bind ^. source $HOME/.screen-setting
 
 chdir $HOME
 screen -t ~ 0
-chdir $HOME/share/movie
+chdir /data/share/movie
 screen -t movie 1
-chdir $HOME/share/movie
+chdir /data/share/movie
 screen -t movie 2
-chdir $HOME/share/movie
-screen -t w3m 3 w3m "http://www.tokyotosho.info/?cat=7"
+chdir /data/share/movie
+screen -t w3m 3 w3m "http://www.nyaa.eu/?page=torrents&cats=1_11"
 screen -t irssi 4 irssi
 chdir $HOME/log
 screen -t log 5
-chdir $HOME/share
+chdir /data/share
 screen -t share 6
