--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,10 +35,21 @@ bind -n C-k select-window -t :-
 bind c new-window -c "#{pane_current_path}"
 
 # コピーモード
-bind -n C-g copy-mode
+#bind -n C-g copy-mode
+bind -n C-g vi-copy
 
 # コピーモードをvimキーバインドに
 set-window-option -g mode-keys vi
+
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy C-v rectangle-toggle
+bind-key -t vi-copy y copy-pipe "xsel -bi"
+bind-key -t vi-copy Enter copy-pipe "xsel -bi"
+bind-key p paste-buffer
+
+# bind-key    -T copy-mode-vi v     send-keys -X begin-selection
+# bind-key    -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "xsel -bi"
+# bind-key    -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -bi"
 
 # Vimのキーバインドでペインをリサイズする
 bind -r H resize-pane -L 5
