--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,7 @@ bind  l select-pane -R
 
 # ウインドウとペインの移動
 bind -n C-l select-pane -t :.+
+bind -n C-o select-pane -t :.-
 bind -n C-j select-window -t :+
 bind -n C-k select-window -t :-
 
@@ -87,3 +88,13 @@ set -g status-interval 60
 ## ヴィジュアルノーティフィケーションを有効にする
 setw -g monitor-activity on
 set -g visual-activity on
+
+# status
+set -g pane-border-status bottom
+set -g pane-border-format " #{pane_index} : #T "
+# border
+set -g pane-border-fg green
+set -g pane-border-bg black
+# アクティブなペインの色
+set -g pane-active-border-fg colour14
+set -g pane-active-border-bg colour21
