--- a/tiarra/tiarra.conf
+++ b/tiarra/tiarra.conf
@@ -61,7 +61,7 @@ general {
   # 省略不能です。
   nick: swirhen
   user: swirhen
-  name: 翠蓮さん@tiarra(ubuntu 16.04)
+  name: 翠蓮さん@tiarra(ubuntu 20.04)
 
   # どのようなユーザーモードでログインするか。+iwや+iのように指定する。
   # 省略された場合はユーザーモードを特に設定しない。
@@ -202,9 +202,9 @@ networks {
   # 複数のネットワークに接続したい場合は多重定義して下さい。
   name: w
   #name: u
-  name: t
-  name: t2
-  name: t3
+  #name: t
+  #name: t2
+  #name: t3
   #name: f
   #name: ty
 
@@ -301,7 +301,7 @@ w {
 }
 
 t {
-  host: 192.168.0.108
+  host: 192.168.0.118
   port: 16668
 
   user: swirhen
@@ -311,7 +311,7 @@ t {
 }
 
 t2 {
-  host: 192.168.0.108
+  host: 192.168.0.118
   port: 16668
 
   user: swirhentv
@@ -324,7 +324,7 @@ t2 {
 }
 
 t3 {
-  host: 192.168.0.108
+  host: 192.168.0.118
   port: 16668
 
   user: _swirhen_
