--- a/TIG/TwitterIrcGateway.exe.config
+++ b/TIG/TwitterIrcGateway.exe.config
@@ -71,10 +71,10 @@
                 <value>False</value>
             </setting>
             <setting name="OAuthClientKey" serializeAs="String">
-                <value>Cjx5NIRxdYKuTbKZbZHfR1AVM</value>
+                <value />
             </setting>
             <setting name="OAuthSecretKey" serializeAs="String">
-                <value>rYHeaHLwnaFOC3XG2qwcyy3yvHNSKvpJRjfHHcqDQqWB5ZZwVl</value>
+                <value />
             </setting>
         </Misuzilla.Applications.TwitterIrcGateway.Settings>
     </userSettings>
