--- a/tiarra/tiarra.conf
+++ b/tiarra/tiarra.conf
@@ -301,7 +301,7 @@ w {
 }
 
 t {
-  host: 192.168.0.118
+  host: localhost
   port: 16668
 
   user: swirhen
@@ -311,7 +311,7 @@ t {
 }
 
 t2 {
-  host: 192.168.0.118
+  host: localhost
   port: 16668
 
   user: swirhentv
@@ -324,7 +324,7 @@ t2 {
 }
 
 t3 {
-  host: 192.168.0.118
+  host: localhost
   port: 16668
 
   user: _swirhen_
