--- a/smb.conf
+++ b/smb.conf
@@ -30,7 +30,7 @@ follow symlinks = yes
 unix extensions = no
 
 # Change this to the workgroup/NT-domain name your Samba server will part of
-   workgroup = "MILLION THE@TER."
+   workgroup = "WORKGROUP"
 
 # server string is the equivalent of the NT Description field
    server string = %h server (Samba, Ubuntu)
