--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,7 +91,9 @@ set -g visual-activity on
 
 # status
 set -g pane-border-status bottom
-set -g pane-border-format " #{pane_index} : #T "
+#set -g pane-border-format " #{pane_index} : #T "
+set -g pane-border-format "#{pane_index} #{pane_current_path} #{pane_current_command}"
+
 # border
 set -g pane-border-fg green
 set -g pane-border-bg black
