--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # prefixキーをC-tに変更する
 set -g prefix C-t
 
-# C-bのキーバインドを解除する
+# irrsi用にキーバインドを解除する
 unbind C-b
 
 # ウィンドウのインデックスを1から始める
@@ -16,9 +16,11 @@ set -sg escape-time 1
 # 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # / でペインを縦に分割する
-bind / split-window -h -c "#{pane_current_path}"
+bind / split-window -h -c "#{pane_current_path}" \; select-layout even-horizontal
 # \ でペインを横に分割する
-bind \ split-window -v -c "#{pane_current_path}"
+bind \ split-window -v -c "#{pane_current_path}" \; select-layout even-vertical
+# @ でペインを4分割する
+bind @ split-window -v -c "#{pane_current_path}" \; split-window -h -c "#{pane_current_path}" \; select-pane -t :.+ \; split-window -h -c "#{pane_current_path}" \; select-pane -t :.-
 
 # Vimのキーバインドでペインを移動する
 bind  h select-pane -L
