--- a/apache2/sites-available/000-default.conf
+++ b/apache2/sites-available/000-default.conf
@@ -42,8 +42,16 @@ AddType audio/x-m4b .m4b
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-DavLockDB /var/lock/dav/DavLock
-DAVMinTimeout 600
+  <Location /repos>
+      DAV svn 
+      SVNPath /data/repos
+      AuthUserFile /etc/apache2/dav_svn.passwd
+      Require valid-user
+      AuthType basic
+      AuthName "Subversion"
+      AuthzSVNAccessFile /etc/apache2/authzsvn.conf
+      Allow from all 
+  </Location>
 
 #<Location /share2/book>
 #	DAV on
