--- a/tiarra/tiarra.conf
+++ b/tiarra/tiarra.conf
@@ -242,13 +242,14 @@ networks {
       # (順番がごちゃごちゃになって)送られてきます。
       channel: #ちょろ@w
       channel: #anigera@w
-      channel: #twitter声オタ部@w
       channel: #おともだちtwitter@t
       channel: #抽出twitter@t
       channel: #Twitter有名人@t
       channel: #Twitter声優@t
       channel: #シンデレラ一門@t
       channel: #ミリオン一座@t
+      channel: #hololive@t
+      channel: #holoart@t
       channel: #Twitter絵描きさん@t
       channel: #Twitter格ゲー@t
       channel: #twitter@t
@@ -865,7 +866,6 @@ ty {
   #   「#aaaaa@ircnet」、「#bbbbb@ircnet:*.jp」、「#ccccc@ircnet」、「#ddddd@ircnet」の4つのチャンネルに入る。
   #channel: #aaaaa@ircnet,#bbbbb@ircnet:*.jp, #ccccc@ircnet
   #channel: #ddddd@ircnet
-      channel: #twitter声オタ部@w
       channel: #ちょろ@w
       channel: #anigera@w
       channel: #gleto@w
@@ -1104,6 +1104,8 @@ ty {
   channel: twitter-seiyu #Twitter声優@t
   channel: twitter-dere #シンデレラ一門@t
   channel: twitter-million #ミリオン一座@t
+  channel: twitter-hololive #hololive@t
+  channel: twitter-hololive #holoart@t
   channel: twitter3 #Twitter@t3
   channel: tyoro #ちょろ@w
   channel: priv priv
@@ -1135,7 +1137,6 @@ ty {
   # クライアントとの間ではERRORメッセージは主に切断警告に使われており、
   # そのまま流してしまうとクライアントが混乱する可能性があります。
   #   設定項目はありません。
-
   # このモジュールを回避してERRORメッセージをクライアントに送りたい場合は、
   # remarkのsend-error-as-is-to-clientを指定してください。
 }
@@ -1366,9 +1367,6 @@ ty {
 }
 
 + Auto::Ignore {
- mask: *シン*ゴジラ*
- mask: *ポケモン*
- mask: *君の名は*
 }
 
 + Log::DBI{
@@ -1386,13 +1384,14 @@ ty {
     # 保存するチャンネル名
     #channel: * +sn
     channel: #ちょろ@w
-      channel: #twitter声オタ部@w
       channel: #anigera@w
       channel: #おともだちtwitter@t
       channel: #抽出twitter@t
       channel: #Twitter声優@t
       channel: #シンデレラ一門@t
       channel: #ミリオン一座@t
+      channel: #hololive@t
+      channel: #holoart@t
       channel: #Twitter有名人@t
       channel: #Twitter絵描きさん@t
       channel: #Twitter格ゲー@t
