--- a/tiarrametro/myconf/conf.yml
+++ b/tiarrametro/myconf/conf.yml
@@ -33,7 +33,7 @@ icon_server_uri: 'http://swirhen.tv/icon_blank.gif?'
 
 # 新着通知バーによる巡回 以下2行のどちらかの書式でも可
 #patrol_channel: '#test@irc'
-patrol_channel: [ '#ちょろ@w', '#おともだちtwitter@t', '#Twitter@t3', '#シンデレラ一門@t', '#ミリオン一座@t' ]
+patrol_channel: [ '#ちょろ@w', '#おともだちtwitter@t', '#Twitter@t3', '#シンデレラ一門@t', '#ミリオン一座@t', '#hololive@t', '#holoart@t' ]
 
 #log_popup_menu:
 #    separator: '@'
