--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -8612,4 +8612,5 @@ reply_header_access DNT deny all
 #		server_pconn_for_nonretriable allow SpeedIsWorthTheRisk
 #Default:
 # Open new connections for forwarding requests Squid cannot retry safely.
-
+acl NOCACHE src all
+cache deny NOCACHE
