--- a/tiarra/doc-src/all.conf.in
+++ b/tiarra/doc-src/all.conf.in
@@ -1,6 +1,6 @@
 # -*- tiarra-conf -*-
 # -----------------------------------------------------------------------------
-# $Id: all.conf.in 11365 2008-05-10 14:58:28Z topia $
+# $Id: all.conf.in 36552 2010-01-27 14:53:29Z drry $
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 # このファイルにはすべてのブロックの解説があります。
@@ -32,6 +32,10 @@
 <&ircnet>
 
 <&2ch>
+
+<&freenode>
+
+<&ustream>
 
 # -----------------------------------------------------------------------------
 # 必須の設定は以上です。以下はモジュール(プラグイン)の設定です。
