--- a/tiarra/doc-src/sample.conf.in
+++ b/tiarra/doc-src/sample.conf.in
@@ -1,10 +1,10 @@
 # -*- tiarra-conf -*-
 # -----------------------------------------------------------------------------
-# $Id: sample.conf.in 11365 2008-05-10 14:58:28Z topia $
+# $Id: sample.conf.in 15771 2008-07-13 23:55:21Z drry $
 # -----------------------------------------------------------------------------
 # tiarra.conf サンプル
 #
-# tiarraは起動時に全ての設定をこのファイルから取得します。
+# Tiarraは起動時に全ての設定をこのファイルから取得します。
 # このファイルの文字コードは任意ですが、改行コードはLFもしくはCRLFでなければなりません。
 #
 # 半角の#で始まる行はコメントとして無視されます。
