--- a/tiarra/tiarra.conf
+++ b/tiarra/tiarra.conf
@@ -302,7 +302,7 @@ w {
 }
 
 t {
-  host: localhost
+  host: tig
   port: 16668
 
   user: swirhen
@@ -312,7 +312,7 @@ t {
 }
 
 t2 {
-  host: localhost
+  host: tig
   port: 16668
 
   user: swirhentv
@@ -325,7 +325,7 @@ t2 {
 }
 
 t3 {
-  host: localhost
+  host: tig
   port: 16668
 
   user: _swirhen_
