--- a/tiarra/tiarra-LogDBI.conf
+++ b/tiarra/tiarra-LogDBI.conf
@@ -1,5 +1,5 @@
 + Log::DBI{
-    source: DBI:mysql:tiarra:192.168.0.51:3306
+    source: DBI:mysql:tiarra:myhost:3306
     user: tiarra
     pass: arrati
     sync: sync
