--- a/tiarra/tiarra.conf
+++ b/tiarra/tiarra.conf
@@ -299,7 +299,7 @@ w {
 }
 
 t {
-  host: localhost
+  host: tig
   port: 16668
 
   user: swirhen
@@ -309,7 +309,7 @@ t {
 }
 
 t2 {
-  host: localhost
+  host: tig
   port: 16668
 
   user: swirhentv
@@ -322,7 +322,7 @@ t2 {
 }
 
 t3 {
-  host: localhost
+  host: tig
   port: 16668
 
   user: _swirhen_
