--- a/tiarra/tiarra.conf
+++ b/tiarra/tiarra.conf
@@ -1360,7 +1360,7 @@ t3 {
 }
 
 + Log::DBI{
-    source: DBI:mysql:myhost:3306
+    source: DBI:mysql:tiarra:myhost:3306
     user: tiarra
     pass: arrati
     sync: sync
