--- a/tiarra/tiarra.conf
+++ b/tiarra/tiarra.conf
@@ -299,7 +299,7 @@ w {
 }
 
 t {
-  host: tig
+  host: localhost
   port: 16668
 
   user: swirhen
@@ -309,7 +309,7 @@ t {
 }
 
 t2 {
-  host: tig
+  host: localhost
   port: 16668
 
   user: swirhentv
@@ -322,7 +322,7 @@ t2 {
 }
 
 t3 {
-  host: tig
+  host: localhost
   port: 16668
 
   user: _swirhen_
@@ -1360,7 +1360,7 @@ t3 {
 }
 
 + Log::DBI{
-    source: DBI:mysql:tiarra:myhost:3306
+    source: DBI:mysql:tiarra:127.0.0.1:3306
     user: tiarra
     pass: arrati
     sync: sync
