--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,8 +17,8 @@ set -sg escape-time 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # / でペインを縦に分割する
 bind / split-window -h -c "#{pane_current_path}" \; select-layout even-horizontal
-# \ でペインを横に分割する
-bind \ split-window -v -c "#{pane_current_path}" \; select-layout even-vertical
+# . でペインを横に分割する
+bind . split-window -v -c "#{pane_current_path}" \; select-layout even-vertical
 # @ でペインを4分割する
 bind @ split-window -v -c "#{pane_current_path}" \; split-window -h -c "#{pane_current_path}" \; select-pane -t :.+ \; split-window -h -c "#{pane_current_path}" \; select-pane -t :.-
 
