tiarra.conf recent off

--- a/tiarra/tiarra.conf
+++ b/tiarra/tiarra.conf
@@ -1102,7 +1102,7 @@ t3 {
   channel: others *@w
 }
 
-+ Log::Recent {
+- Log::Recent {
   # クライアントを接続した時に、保存しておいた最近のメッセージを送る。
 
   # クライアントオプションの no-recent-logs が指定されていれば送信しません。
@@ -1387,6 +1387,7 @@ t3 {
       channel: #Twitter格ゲー@t
       channel: #Console@t
       channel: #twitter@t3
+      channel: #gleto@w
     #追加するべし
 }
 
