--- a/squid/squid.conf
+++ b/squid/squid.conf
@@ -8121,7 +8121,7 @@ refresh_pattern .		0	20%	4320
 #	Example: dns_nameservers 10.0.0.1 192.172.0.4
 #Default:
 # Use operating system definitions
-#dns_nameservers localhost
+dns_nameservers 192.168.0.108
 
 #  TAG: hosts_file
 #	Location of the host-local IP name-address associations
